<resources>
    <string name="app_name">CanteenManager</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signout">Signout</string>
    <string name="canteen_name">Canteen Name</string>
    <string name="today_s_menu">Today\'s Menu</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="phone_number">Phone Number</string>
    <string name="average_waitingtime">Average Waitingtime</string>
    <string name="save">Save</string>
</resources>
